src/objects/ContractLineItem.object
<CustomObject>
    <fields>
        <fullName>SBQQSC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that owns this subscription. This relationship is used for volume discount calculations.</description>
        <inlineHelpText>Account that owns this subscription. This relationship is used for volume discount calculations.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__AdditionalDiscountAmount__c</fullName>
        <description>Additional Discount for this line item, if expressed as an amount</description>
        <inlineHelpText>Additional Discount for this line item, if expressed as an amount</inlineHelpText>
        <label>Additional Disc. (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQSC__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQSC__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQSC__Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</description>
        <inlineHelpText>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</inlineHelpText>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQSC__BundledQuantity__c</fullName>
        <description>For items with calculated quantities this field hold the original (user entered) quantity.</description>
        <inlineHelpText>For items with calculated quantities this field holds the original quantity entered by the user.</inlineHelpText>
        <label>Original Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQSC__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items are zero price and do not allow price or quantity to be edited.</description>
        <inlineHelpText>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items have a zero price and do not allow price or quantity to be edited.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQSC__ChargeType__c</fullName>
        <description>The type of the product charge.  This is a system field that is derived from the associated product.</description>
        <inlineHelpText>The type of the product charge.  This is a system field that is derived from the associated product.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQSC__ComponentDiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes additional discount for this component to the parent package discount.</description>
        <inlineHelpText>Fixes additional discount for this component to the parent package discount.</inlineHelpText>
        <label>Component Discounted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQSC__ComponentSubscriptionScope__c</fullName>
        <description>Subscription scope set at the component level. This field overrides the subscriptions cope copied from the product.</description>
        <inlineHelpText>Percent of Total scope set at the component level. This field overrides the Percent of Total scope copied from the Product Option.</inlineHelpText>
        <label>Component Percent of Total Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Components</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQSC__ContractNumber__c</fullName>
        <description>Number of associated service contract.</description>
        <formula>ServiceContract.ContractNumber</formula>
        <inlineHelpText>Number of associated service contract.</inlineHelpText>
        <label>Contract #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__CreditProductId__c</fullName>
        <description>ID of upgrade credit product for this line item.</description>
        <formula>PricebookEntry.Product2.SBQQ__UpgradeCredit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ID of upgrade credit product for this line item.</inlineHelpText>
        <label>Credit Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__CustomerPrice__c</fullName>
        <description>Price the end user paid for this line item.</description>
        <inlineHelpText>Price paid for this line item.</inlineHelpText>
        <label>Customer Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQSC__DimensionType__c</fullName>
        <formula>TEXT(SBQQSC__Dimension__r.SBQQ__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dimension Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__Dimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price Dimension associated with this line item</description>
        <inlineHelpText>Price Dimension associated with this line item</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__DiscountScheduleType__c</fullName>
        <description>Discount schedule type. Must be a stored value because it&apos;s used in formula fields that are rolled up.</description>
        <inlineHelpText>Discount schedule type. Copied from Type field in associated discount schedule.</inlineHelpText>
        <label>Discount Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQSC__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</description>
        <inlineHelpText>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__Discount__c</fullName>
        <description>Additional Discount for this line item, if expressed as a percentage</description>
        <inlineHelpText>Additional Discount for this line item, if expressed as a percentage</inlineHelpText>
        <label>Additional Disc. (%)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQSC__DistributorDiscount__c</fullName>
        <description>Discount to be taken on top of the Partner Discount.</description>
        <inlineHelpText>Discount to be taken on top of the Partner Discount.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQSC__DynamicOptionId__c</fullName>
        <description>Contains feature id and product id to identify the feature and optional SKU associated with this line.</description>
        <inlineHelpText>Identifies feature and dynamic option for this line.</inlineHelpText>
        <label>Dynamic Option ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__HasConsumptionSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this line item has at least one consumption schedule</description>
        <inlineHelpText>Indicates if this line item has at least one consumption schedule</inlineHelpText>
        <label>Has Consumption Schedules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQSC__ListPrice__c</fullName>
        <description>List price for this line item.</description>
        <inlineHelpText>List price for this line item.</inlineHelpText>
        <label>List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQSC__MarkupAmount__c</fullName>
        <description>Markup for this line item, if expressed as an amount</description>
        <inlineHelpText>Markup for this line item, if expressed as an amount</inlineHelpText>
        <label>Markup (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQSC__MarkupRate__c</fullName>
        <description>Markup for this line item, if expressed as a percentage</description>
        <inlineHelpText>Markup for this line item, if expressed as a percentage</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQSC__NetPrice__c</fullName>
        <description>Net price for this line item.</description>
        <inlineHelpText>Net price for this line item.</inlineHelpText>
        <label>Net Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQSC__Number__c</fullName>
        <description>Number indicating this line&apos;s position within its group or quote.</description>
        <inlineHelpText>Number indicating this line&apos;s position within its group or quote.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQSC__OptionDiscountAmount__c</fullName>
        <description>Discount extended on this product because it&apos;s part of a package.</description>
        <inlineHelpText>Discount extended on this product because it&apos;s part of a package.</inlineHelpText>
        <label>Option Discount (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQSC__OptionDiscount__c</fullName>
        <description>If this line is for an optional SKU, this field captures any discount given to the package and extended to the option.</description>
        <inlineHelpText>If this line is for an optional SKU, this field captures any discount given to the package and extended to the option.</inlineHelpText>
        <label>Option Discount (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQSC__OptionLevel__c</fullName>
        <description>Indicates nest level of this option (only applies to lines that are generated from options).</description>
        <inlineHelpText>Indicates nest level of this option (only applies to lines that are generated from options).</inlineHelpText>
        <label>Option Level</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQSC__OptionType__c</fullName>
        <description>Indicates the Option Type, which is copied from related Product Option. Determines how quantity is calculated.</description>
        <inlineHelpText>Indicates the Option Type, which is copied from related Product Option. Determines how quantity is calculated.</inlineHelpText>
        <label>Option Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Related Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQSC__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The order product where this service contract line is created from.</description>
        <inlineHelpText>The order product where this service contract line is created from.</inlineHelpText>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__OriginalQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Exists for convenience of not having to run relationship queries.</description>
        <inlineHelpText>Original Quote Line of the subscription.</inlineHelpText>
        <label>Original Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Quote Lines (Derived)</relationshipLabel>
        <relationshipName>OriginalQuoteLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__OriginalUnitCost__c</fullName>
        <description>Original unit cost of the line item at the time of purchase before Cost Schedules were applied.</description>
        <inlineHelpText>Original unit cost of the line item at the time of purchase before Cost Schedules were applied.</inlineHelpText>
        <label>Original Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQSC__PartnerDiscount__c</fullName>
        <description>Partner discounts are applied after all automatic and discretionary discounts. The partner discount is taken into account in the Partner Price.</description>
        <inlineHelpText>Partner discounts are applied after all automatic and discretionary discounts. The partner discount is taken into account in the Partner Price.</inlineHelpText>
        <label>Partner Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQSC__PricingMethod__c</fullName>
        <description>Determines how the price for this line item is set. &quot;List&quot; = calculated by subtracting discount from list price. &quot;Cost&quot;  = calculated by adding markup to cost.</description>
        <inlineHelpText>Indicates how the price for this line item is calculated. &quot;List&quot; = subtracting discount from list price. &quot;Cost&quot; = adding markup to cost.</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQSC__ProductId__c</fullName>
        <formula>PricebookEntry.Product2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__ProductName__c</fullName>
        <description>Pulls in the Product Name</description>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__ProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product option that generated this line (if any).</description>
        <inlineHelpText>Product option that generated this line (if any).</inlineHelpText>
        <label>Product Option</label>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__ProductSubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Product Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQSC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product used to sell this subscription.</description>
        <inlineHelpText>Product used to sell this subscription.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__ProrateMultiplier__c</fullName>
        <description>Calculated ratio used to compute prorated price.</description>
        <inlineHelpText>Calculated ratio used to compute prorated price.</inlineHelpText>
        <label>Prorate Multiplier</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQSC__Quantity__c</fullName>
        <description>Quantity of this line item purchased by the customer.</description>
        <inlineHelpText>Quantity of this line item purchased by the customer.</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQSC__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this line item.</description>
        <inlineHelpText>Quote line that generated this line item.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RegularPrice__c</fullName>
        <description>Regular Price for this line item.</description>
        <inlineHelpText>Regular Price for this line item.</inlineHelpText>
        <label>Regular Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalPrice__c</fullName>
        <description>Renewal price for this line item. Overrides default renewal price computation based on account&apos;s Renewal Pricing field.</description>
        <inlineHelpText>Enter renewal price to override default calculation. Overrides default renewal price computation based on account&apos;s Renewal Pricing field.</inlineHelpText>
        <label>Renewal Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalProductId__c</fullName>
        <description>Exists for convenience of not having to run relationship queries.</description>
        <formula>IF(ISBLANK(PricebookEntry.Product2.SBQQ__RenewalProduct__c),PricebookEntry.Product2.Id,PricebookEntry.Product2.SBQQ__RenewalProduct__c)</formula>
        <inlineHelpText>Product ID for the renewal line item.</inlineHelpText>
        <label>Renewal Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalProductOptionId__c</fullName>
        <formula>SBQQSC__ProductOption__r.SBQQ__RenewalProductOption__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalProductOptionProductId__c</fullName>
        <formula>SBQQSC__ProductOption__r.SBQQ__RenewalProductOption__r.SBQQ__OptionalSKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalProductOptionSubscriptionPricing__c</fullName>
        <formula>TEXT(SBQQSC__ProductOption__r.SBQQ__RenewalProductOption__r.SBQQ__OptionalSKU__r.SBQQ__SubscriptionPricing__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option Sub Pricing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalQuantity__c</fullName>
        <description>Quantity of this line item that will be renewed.</description>
        <inlineHelpText>Quantity of this line item that will be renewed.</inlineHelpText>
        <label>Renewal Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewedDate__c</fullName>
        <description>Date this line item was renewed as determined by date the renewal opportunity was contracted.</description>
        <inlineHelpText>Date this line item was renewed. Blank means it has not been renewed.</inlineHelpText>
        <label>Renewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RequiredById__c</fullName>
        <description>What Id the field is required by.</description>
        <inlineHelpText>What Id the field is required by.</inlineHelpText>
        <label>Required By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RequiredByProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Product of this subscription.</description>
        <inlineHelpText>Parent Product of this subscription.</inlineHelpText>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Child Subscriptions</relationshipLabel>
        <relationshipName>ChildSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RevisedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup the revised line item for this field.</inlineHelpText>
        <label>Revised Line Item</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>Revisions</relationshipLabel>
        <relationshipName>Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RootId__c</fullName>
        <description>The ID of the subscription or asset at the root of the bundle that contains this subscription</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID of the subscription or asset at the root of the bundle that contains this subscription</inlineHelpText>
        <label>Root Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__SegmentEndDate__c</fullName>
        <description>For MDQ products, the End Date from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the End Date from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQSC__SegmentIndex__c</fullName>
        <description>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQSC__SegmentKey__c</fullName>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__SegmentLabel__c</fullName>
        <description>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</description>
        <inlineHelpText>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</inlineHelpText>
        <label>Segment Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__SegmentQuantity__c</fullName>
        <description>For MDQ Products, the quantity corresponding to the segment&apos;s original Quote Line</description>
        <inlineHelpText>For MDQ Products, the quantity corresponding to the segment&apos;s original Quote Line</inlineHelpText>
        <label>Segment Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQSC__SegmentStartDate__c</fullName>
        <description>For MDQ products, the Start Date from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the Start Date from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQSC__SegmentUpliftAmount__c</fullName>
        <description>For MDQ products, the Uplift Amount from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the Uplift Amount from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment Uplift (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQSC__SegmentUplift__c</fullName>
        <description>For MDQ products, the Uplift from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the Uplift from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment Uplift</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQSC__SpecialPrice__c</fullName>
        <description>Special Price for this line item.</description>
        <inlineHelpText>Special Price for this line item.</inlineHelpText>
        <label>Special Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQSC__StartDate__c</fullName>
        <description>The first date this line item is in effect.</description>
        <formula>ServiceContract.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The first date this line item is in effect.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQSC__SubscriptionEndDate__c</fullName>
        <description>Matches the quote line end date by default. If blank, it will match the contract end date.</description>
        <inlineHelpText>Matches the quote line end date by default. If blank, it will match the contract end date.</inlineHelpText>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQSC__SubscriptionStartDate__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQSC__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQSC__ProductSubscriptionType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQSC__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term. This is useful when you want to show a breakdown of payments in separate groups, for different terms, yet you want to discount reflected for the entire duration of the subscription. Leave Term Discount Level blank if you want discount schedules applied based on the term of each line item.</description>
        <inlineHelpText>Schedule for discounts based on subscription term. Setting this to &quot;Group&quot; applies the discount rate for the group term, while setting it to &quot;Quote&quot; applies the discount rate for the entire quote term, regardless of the different terms in your groups.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Subscriptions (Term Discouned)</relationshipLabel>
        <relationshipName>TermDiscountedSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__TerminatedDate__c</fullName>
        <description>Date on which this line item terminated.</description>
        <inlineHelpText>Date the line item terminated. Automatically populated when covered asset is upgraded.</inlineHelpText>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQSC__UnitCost__c</fullName>
        <description>Unit Cost for this line item.</description>
        <inlineHelpText>Unit Cost for this line item.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>